test/files/run/repl-reset.check

scala> val x1 = 1
x1: Int = 1

scala> val x2 = 2
x2: Int = 2

scala> val x3 = 3
x3: Int = 3

scala> case class BippyBungus()
defined class BippyBungus

scala> x1 + x2 + x3
res0: Int = 6

scala> :reset
Resetting interpreter state.
Forgetting this session history:

val x1 = 1
val x2 = 2
val x3 = 3
case class BippyBungus()
x1 + x2 + x3

Forgetting all expression results and named terms: $intp, BippyBungus, x1, x2, x3
Forgetting defined types: BippyBungus

scala> x1 + x2 + x3
<console>:12: error: not found: value x1
       x1 + x2 + x3
       ^
<console>:12: error: not found: value x2
       x1 + x2 + x3
            ^
<console>:12: error: not found: value x3
       x1 + x2 + x3
                 ^

scala> val x1 = 4
x1: Int = 4

scala> new BippyBungus
<console>:12: error: not found: type BippyBungus
       new BippyBungus
           ^

scala> class BippyBungus() { def f = 5 }
defined class BippyBungus

scala> { new BippyBungus ; x1 }
res2: Int = 4

scala> :quit
